--- a/EmpApp/Components/Layout/NavMenu.razor
+++ b/EmpApp/Components/Layout/NavMenu.razor
@@ -19,6 +19,12 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Employees
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="titles">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Titles
+            </NavLink>
+        </div>
     </nav>
 </div>
 
